--- a/src/assets/scss/cards/_pizza.scss
+++ b/src/assets/scss/cards/_pizza.scss
@@ -164,7 +164,6 @@
     padding-top: 0.6em;
     padding-bottom: 0.6em;
     margin-bottom: 24px;
-    border-radius: 5.25em;
     border: none;
     background-color: transparent;
     font-size: 16px;
@@ -202,7 +201,11 @@
 
     &::before {
       z-index: 1;
-      inset: 0;
+      height: 100%;
+      width: 100%;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
       border-radius: 5.25em;
       background-color: var(--card-pizza);
       transition: opacity 0.3s;
@@ -210,7 +213,11 @@
 
     &::after {
       z-index: 0;
-      inset: -0.07em;
+      height: calc(100% + 2px);
+      width: calc(100% + 2px);
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
       border-radius: 5.25em;
       background: var(--elem-gradient);
     }
